vlib/v/checker/tests/enum_err.vv
module main

enum Color {
    green = 'green'
    yellow = 1+1
    blue
}

fn main(){
	println('hello')
}
